App.css: Fixed broken container widths on mobile screens.

--- a/src/App.css
+++ b/src/App.css
@@ -164,3 +164,10 @@ footer a {
 footer a:hover {
   color: lightslategray;
 }
+
+@media screen and (max-width: 768px) {
+  #editor,
+  .preview-container {
+    width: 38rem;
+  }
+}
